--- a/css-canvas-medical/styles.css
+++ b/css-canvas-medical/styles.css
@@ -27,6 +27,7 @@ h3 {
   background-repeat: no-repeat;
   position: relative;
   left: 70px;
+  margin-top: 70px;
 }
 
 .main-picture > img {
@@ -37,6 +38,7 @@ h3 {
   position: absolute;
   padding-left: 80px;
   padding-right: 750px;
+  padding-bottom: 20px;
   top: 70px;
   color: white;
 }
@@ -75,12 +77,9 @@ button.get-started {
 .overlay {
   /*
   background: linear-gradien (rgba (255, 255, 255, 0.1));
-
   */
 
-  background: linear-gradien (transparent, rgba(73, 73, 73, 0.9));
-
-  /* your code here */
+  background: rgba(73, 73, 73, 0.3);
   position: absolute;
   top: 0;
   bottom: 0;
@@ -89,11 +88,14 @@ button.get-started {
 }
 
 .header {
-  padding-top: 5%;
-  padding-bottom: 5%;
+  padding-top: 30px;
+  padding-bottom: 5px;
   display: flex;
   padding-left: 70px;
   justify-content: right;
+  border-bottom-style: solid;
+  border-width: 0.1px;
+  border-bottom-color: rgb(230, 230, 230);
 }
 
 .row-1 {
@@ -126,7 +128,7 @@ button.menu-button:hover {
   position: relative;
   padding-top: 30px;
   padding-bottom: 50px;
-  margin-top: 60px;
+  margin-top: 70px;
   background-color: whitesmoke;
 }
 
